# voyager-observatory

./: .gitignore  .mcp.json  .pm_encoder_config.json  CHANGELOG.md  CLAUDE.md  Makefile  QA_INFRASTRUCTURE.md  README.md  REVIEW_DECISIONS.md  REVIEW_FINDINGS.md  REVIEW_HANDOFF.md  REVIEW_ROADMAP.md  RUST_ROADMAP.md  SYSTEM_INSTRUCTIONS.md  TESTING.md  TODO.md  bitbucket-pipelines.yml  c  pm_encoder.py  prompt
.github/workflows/: quality.yml
.llm_archive/: c  ideas-for-the-future-ingestion-pipeline.md  ideas-for-the-future-utf8dok-integration.md  mission_briefing_twins.md  pm_encoder_knowledge_base.md  strategic-recovery-plan.md  twin-methodology-coaching.md
.pm_encoder/: context_store.json  sessions.json
LLM/: 2025-07-23_sip-4_enhance-pm-encoder-with-sorting.md  2025-12-20_mcp-ux-improvements.md
bridges/wasm/: README.md
classic/python/: README.md
classic/python/tests/: generate_vectors.py  test_comprehensive.py  test_priority.py
classic/python/tests/fixtures/javascript/: sample.js
classic/python/tests/fixtures/json/: sample.json
classic/python/tests/fixtures/python/: sample.py
classic/python/tests/fixtures/rust/: sample.rs
classic/python/tests/fixtures/shell/: sample.sh
docs/: AgiLLM_MANIFESTO.md  CFD_INTEGRATION_DECISION.md  CFD_KNOWLEDGE_BASE.md  EVOLUTION_ROADMAP.md  KNOWLEDGE_BASE.md  MULTI_AI_STORY.html  PM_ENCODER_STATUS_REPORT.md  RUST_GROWTH_STRATEGY.md  SESSIONS.md  STRATEGIC_VISION_2026.md  THE_TURING_AUDIT.md  THE_TWINS_ARCHITECTURE.md  THE_TWINS_PROTOCOL_PAPER.md  VOYAGER_GUIDE.md
docs/archive/: PHASE_2_SPECS.md  v2.0_FRACTAL_PROTOCOL_SPEC.md  v2.2_SKELETON_PROTOCOL.md
docs/research/cfd/: ARCHITECTURE_DEEP_DIVE.md  CFD_KNOWLEDGE_BASE.md
docs/research/vision/: INTENT_DRIVEN_EXPLORATION.md  WEEK2_INTENT_SPRINT_SPEC.md
docs/specs/: FRACTAL_CONTEXT_SPEC.md  v1.7.0_INTELLIGENCE_SPEC.md
experiments/lsp_poc/: Cargo.toml
experiments/lsp_poc/benches/: lsp_vs_regex.rs
experiments/lsp_poc/src/: comparison.rs  lib.rs  metrics.rs
experiments/lsp_poc/tests/: rust_analyzer_integration.rs
pm_coach/: __init__.py  source.py
pm_coach/sources/: cloned.py
pm_coach_results/: results.json
research/: METHODOLOGY.md  README.md  RESEARCH_FRAMEWORK.md
research/data/: cli_parity.json  daily_snapshots.csv  implementation_gap_report.md  weekly_notes.md
rust/: Cargo.toml  README.md  cobertura.xml  demo.html  fractal_context.xml  tarpaulin-report.html
rust/.github/workflows/: release.yml
rust/.pm_encoder/: context_store.json  journal.json  sessions.json
rust/benches/: regex_engine.rs
rust/coverage_report/: tarpaulin-report.html
rust/src/: budgeting.rs  init.rs  lenses.rs  lib.rs
rust/src/analyzers/: generic.rs  mod.rs  rust_analyzer.rs
rust/src/core/: ast_bridge.rs  census.rs  engine.rs  error.rs  manifest.rs  metrics.rs  mod.rs  models.rs  regex_engine.rs  search.rs  serialization.rs  store.rs  walker.rs  zoom.rs
rust/src/core/.pm_encoder/: context_store.json
rust/src/core/celestial/: compass.rs  constellation_mapper.rs  mod.rs  nebula_namer.rs
rust/src/core/fractal/: builder.rs  context.rs  layers.rs  mod.rs  navigation.rs
rust/src/core/fractal/clustering/: algorithms.rs  mod.rs  shell_patterns.rs  vectorizer.rs
rust/src/core/fractal/intent/: composition.rs  decisions.rs  explorer.rs  mod.rs  primitives.rs
rust/src/core/fractal/relationships/: call_graph.rs  extractor.rs  mod.rs
rust/src/core/fractal/semantic/: cross_language.rs  mod.rs  multi_language.rs  normalization.rs  unified_substrate.rs
rust/src/core/orchestrator/: auto_focus.rs  fallback.rs  journal.rs  mod.rs  smart_defaults.rs
rust/src/core/plugin/: mod.rs
rust/src/core/plugins/: engine.rs  error.rs  loader.rs  mod.rs  sandbox.rs
rust/src/core/plugins/bridges/: mod.rs  patterns.rs  vo_table.rs
rust/src/core/presenter/: emoji_formatter.rs  mod.rs  transparency.rs
rust/src/core/skeleton/: allocator.rs  mod.rs  parser.rs  tests.rs  types.rs
rust/src/core/spectrograph/: mod.rs
rust/src/core/syntax/: adapter.rs  ast.rs  mod.rs
rust/src/core/temporal/: cache.rs  engine.rs  geological.rs  metrics.rs  mod.rs  stellar_drift.rs
rust/src/formats/: mod.rs  xml_writer.rs
rust/src/plugins/: abl.rs  mod.rs  python.rs  shell.rs  typescript.rs
rust/src/server/: mod.rs
rust/tests/: skeleton_integration.rs  skeleton_tests.rs  test_ast_optics.rs  test_celestial_census.rs  test_celestial_navigation.rs  test_cli_integration.rs  test_mcp_rich_context.rs  test_plugin_ecosystem.rs  test_semantic_determinism.rs  test_stellar_drift.rs  test_syntax_integration.rs  test_temporal_observatory.rs  test_universal_spectrograph.rs  test_vectors.rs
rust/voyager-ast/: Cargo.toml
rust/voyager-ast/src/: error.rs  ir.rs  lib.rs  provider.rs  registry.rs
rust/voyager-ast/src/adapters/: mod.rs  python_adapter.rs  rust_adapter.rs  typescript_adapter.rs
scripts/: backup.sh  bootstrap.sh  doc_gen.py  generate_cli_contract.py  generate_cli_vectors.py  track_metrics.py  verify_cli_parity.py
test_vectors/: basic_serialization.json  binary_detection.json  cli_contract.json  large_file_skip.json
test_vectors/rust_parity/: README.md  analyzer_01_python_class.json  analyzer_02_python_function.json  analyzer_03_python_imports.json  analyzer_04_javascript_function.json  analyzer_05_javascript_imports.json  analyzer_06_rust_struct.json  analyzer_07_rust_function.json  analyzer_08_shell_functions.json  analyzer_09_mixed_project.json  analyzer_10_structure_preservation.json  cli_01_help.json  cli_02_version.json  cli_03_invalid_arg.json  cli_04_missing_dir.json  config_01_file_loading.json  config_03_ignore_patterns.json  config_04_include_patterns.json  config_05_pattern_precedence.json  edge_case_binary_ai.json  serial_01_basic_sorting.json  serial_02_empty_directory.json  serial_03_single_file.json  serial_04_nested_structure.json  serial_05_newline_handling.json  xml_v2_safety.json
tests/: test_budget_strategies.py  test_budgeting.py  test_comprehensive.py  test_pm_encoder.py
tests/fixtures/markdown/: sample.md
tests/fixtures/rust/: sample.rs
(+1 files in other folders)
