[package]
name = "pm_encoder"
version = "1.0.0"
edition = "2021"
description = "High-performance context serializer (Rust Engine)"
license = "MIT"
repository = "https://github.com/alanbld/pm_encoder"
keywords = ["llm", "context", "serialization", "ai", "wasm"]
categories = ["command-line-utilities", "wasm"]

[lib]
name = "pm_encoder"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pm_encoder"
path = "src/bin/main.rs"

[[bin]]
name = "pm_encoder_mcp"
path = "src/bin/mcp_server.rs"
required-features = ["mcp"]

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
mcp = ["rmcp", "tokio", "schemars_1"]

[dependencies]
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
globset = "0.4"
regex = "1.10"
lazy_static = "1.4"
chrono = "0.4"
sha2 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# MCP dependencies (optional)
rmcp = { version = "0.8", features = ["server"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
schemars_1 = { package = "schemars", version = "1.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
