[workspace]
members = [".", "voyager-ast"]
resolver = "2"

[package]
name = "voyager-observatory"
version = "1.0.0"
edition = "2021"
description = "Voyager Observatory: The Fractal Telescope for Code"
license = "MIT"
repository = "https://github.com/alanbld/voyager-observatory"
keywords = ["llm", "context", "serialization", "ai", "wasm", "tree-sitter", "ast"]
categories = ["command-line-utilities", "wasm", "development-tools"]

[lib]
name = "pm_encoder"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Primary binary: The Voyager Observatory command
[[bin]]
name = "vo"
path = "src/bin/vo.rs"

# Alias for backwards compatibility
[[bin]]
name = "pm_encoder"
path = "src/bin/pm_encoder.rs"

# MCP Server binary
[[bin]]
name = "pm_encoder_mcp"
path = "src/bin/mcp_server.rs"
required-features = ["mcp"]

[features]
default = ["temporal"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]
mcp = ["rmcp", "tokio", "schemars_1"]
temporal = ["git2"]
plugins = ["mlua"]

[dependencies]
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
globset = "0.4"
regex = "1.10"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
ignore = "0.4"
petgraph = "0.6"

# Voyager AST - structural optics layer
voyager-ast = { path = "voyager-ast" }

# Tree-sitter core and well-maintained language grammars
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.23"
# Note: Additional grammars (PHP, Swift, Kotlin, Scala, YAML, Lua, SQL, HCL, Dockerfile,
# TOML, Markdown) will be added as optional features in a future release when
# compatible tree-sitter versions are available

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# MCP dependencies (optional)
rmcp = { version = "0.8", features = ["server"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
schemars_1 = { package = "schemars", version = "1.1", optional = true }

# Temporal (Chronos Engine) dependencies (optional)
git2 = { version = "0.19", optional = true }

# Plugin ecosystem dependencies (optional)
mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }
dirs = "5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.5"

[[bench]]
name = "regex_engine"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
